@@ -31,6 +31,8 @@ Run "repsys COMMAND --help" for more information.
 Written by Gustavo Niemeyer <gustavo@niemeyer.net>
 """
 
+command_aliases = {"import": "putsrpm"}
+
 def plugin_help(opt, val, parser, mode):
     if parser is None:
         prog = sys.argv[0]
@@ -65,6 +67,10 @@ def parse_options():
 
 def dispatch_command(command, argv, debug=0):
     sys.argv = argv
+    try:
+        command = command_aliases[command]
+    except KeyError:
+        pass
     try:
         repsys_module = __import__("RepSys.commands."+command)
         commands_module = getattr(repsys_module, "commands")
